--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="white">#FFFFFF</color>
     <color name="red">#FF0000</color>
+    <color name="black">#000000</color>
 </resources>
