--- a/app/src/main/res/layout/item_home_title.xml
+++ b/app/src/main/res/layout/item_home_title.xml
@@ -1,47 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
-   <com.daimajia.slider.library.SliderLayout
+              android:layout_height="match_parent"
+              android:fitsSystemWindows="false"
+              android:orientation="vertical">
+
+    <com.daimajia.slider.library.SliderLayout
         android:id="@+id/home_slider"
         android:layout_width="match_parent"
-        android:layout_height="150dp" />
-    <android.support.v4.view.ViewPager
-        android:id="@+id/home_vp"
+        android:layout_height="150dp"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-    </android.support.v4.view.ViewPager>
+        android:layout_height="160dp">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/home_vp"
+            android:layout_width="match_parent"
+            android:layout_height="150dp">
+        </android.support.v4.view.ViewPager>
+
+        <com.young.jdmall.ui.widget.CricleIndicatorView
+            android:id="@+id/cricle_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="8dp"/>
+    </RelativeLayout>
+
     <ImageView
-        android:background="@mipmap/home_big_bag"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="120dp"
+        android:background="@mipmap/home_big_bag"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="6dp"
         android:layout_height="32dp"
+        android:layout_marginTop="6dp"
         android:background="@drawable/home_notice_bg"
+        android:gravity="center_vertical"
         android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:gravity="center_vertical">
+        android:paddingRight="15dp">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:text="京东"/>
+            android:text="京东"
+            android:textColor="@android:color/black"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="快报"
             android:background="@drawable/kuaibao_bg"
+            android:text="快报"
             android:textColor="#ffffffff"
             android:textSize="14sp"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:text=" : "
             android:textColor="#989898"
-            android:text=" : "/>
+            android:textSize="14sp"/>
 
         <com.young.jdmall.ui.widget.NoticeView
             android:id="@+id/notice_view"
@@ -58,12 +79,49 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="更多"
             android:textColor="#666666"
             android:textSize="14sp"/>
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_jd_buy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="6dp"
+            android:drawableLeft="@mipmap/b3f"
+            android:drawablePadding="6dp"
+            android:gravity="center"
+            android:text="京东秒杀"
+            android:textColor="@android:color/holo_red_dark"/>
+
+        <com.young.jdmall.ui.widget.CountDownView
+            android:id="@+id/count_down_view"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawablePadding="6dp"
+            android:drawableRight="@mipmap/ayi"
+            android:text="京选尖货轮番秒"
+            android:textColor="@android:color/holo_red_dark"/>
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/flash_recycler_view"
+        android:background="#ede8e8"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"/>
 
 
 </LinearLayout>
