--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_home"
+        android:background="#faf7f7"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
