--- a/app/src/main/res/layout/item_home_title.xml
+++ b/app/src/main/res/layout/item_home_title.xml
@@ -119,7 +119,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/flash_recycler_view"
-        android:background="#ede8e8"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="120dp"/>
 
