--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -22,6 +22,7 @@
             android:textColor="@android:color/black"
             android:textSize="24sp"/>
         <ImageView
+            android:id="@+id/iv_calendar"
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
