--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -19,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我的日历"
+            android:text="我的订单"
             android:textColor="@android:color/black"
             android:textSize="24sp"/>
         <ImageView
@@ -27,9 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:background="@mipmap/aba"/>
+            android:background="@mipmap/apx"/>
     </RelativeLayout>
-
 
     <android.support.design.widget.TabLayout
 
@@ -37,9 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabBackground="@android:color/white"
-        app:tabIndicatorColor="@android:color/black"
+        app:tabIndicatorColor="@android:color/holo_red_light"
         app:tabMode="scrollable"
-        app:tabSelectedTextColor="@android:color/black"
+        app:tabSelectedTextColor="@android:color/holo_red_light"
         app:tabTextColor="@android:color/darker_gray"
         >
 
