--- a/app/src/main/res/layout/item_home_title.xml
+++ b/app/src/main/res/layout/item_home_title.xml
@@ -31,7 +31,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="110dp"
         android:background="@mipmap/home_big_bag"/>
 
     <LinearLayout
@@ -85,8 +85,13 @@
             android:textColor="#666666"
             android:textSize="14sp"/>
     </LinearLayout>
-
     <LinearLayout
+        android:id="@+id/seckill_container"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:padding="2dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -122,6 +127,7 @@
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="120dp"/>
+    </LinearLayout>
 
 
 </LinearLayout>
