--- a/app/src/main/res/layout/goods_item_view.xml
+++ b/app/src/main/res/layout/goods_item_view.xml
@@ -1,97 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_margin="2dp"
-              android:background="#ede8e8"
-              android:orientation="horizontal">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/goods_item"
+    android:layout_width="match_parent"
+    android:layout_height="285dp"
+    android:layout_margin="2dp"
+    android:layout_marginTop="4dp"
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/goods_item"
-        android:orientation="vertical"
+    <ImageView
+        android:id="@+id/iv_pic"
         android:layout_width="match_parent"
-        android:background="@android:color/white"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/iv_pic"
-            android:src="@mipmap/goods2"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"/>
+        android:layout_height="230dp"
+        android:layout_gravity="center"
+        android:src="@mipmap/goods2"/>
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:text="加肥加大身份似懂非懂积分递四方速递打发斯蒂芬发打发斯蒂芬斯蒂芬打发斯蒂"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <RelativeLayout
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="6dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="加肥加大身份似懂非懂积分递四方速递打发斯蒂芬发打发斯蒂芬斯蒂芬打发斯蒂"/>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="6dp"
+        android:layout_marginTop="6dp">
+
         <TextView
             android:id="@+id/tv_price"
-            android:textColor="@android:color/holo_red_dark"
-            android:text="￥82.9"
-            android:layout_centerVertical="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-            <ImageView
-                android:id="@+id/iv_small_pic"
-                android:src="@mipmap/b3f"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="8dp"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
-    </LinearLayout>
-
-
-    <!--<LinearLayout
-        android:id="@+id/right_goods_item"
-        android:orientation="vertical"
-        android:layout_width="0dp"
-        android:layout_marginLeft="4dp"
-        android:background="@android:color/white"
-        android:layout_height="wrap_content"
-        android:layout_weight="1">
-        <ImageView
-            android:id="@+id/iv_right_pic"
-            android:src="@mipmap/goods2"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"/>
-
-        <TextView
-            android:id="@+id/tv_right_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:text="加肥加大身份似懂非懂积分递四方速递打发斯蒂芬发打发斯蒂芬斯蒂芬打发斯蒂"/>
+            android:layout_centerVertical="true"
+            android:text="￥82.9"
+            android:textColor="@android:color/holo_red_dark"/>
 
-        <RelativeLayout
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="6dp"
+        <ImageView
+            android:id="@+id/iv_small_pic"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_right_price"
-                android:textColor="@android:color/holo_red_dark"
-                android:text="￥82.9"
-                android:layout_centerVertical="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <ImageView
-                android:id="@+id/iv_right_small_pic"
-                android:src="@mipmap/b3f"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="8dp"
-                android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </RelativeLayout>
-    </LinearLayout>-->
-
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:src="@mipmap/b3f"/>
+    </RelativeLayout>
 </LinearLayout>
