--- a/app/src/main/res/layout/activity_add_edit_receipt_address.xml
+++ b/app/src/main/res/layout/activity_add_edit_receipt_address.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:padding="14dp">
         <ImageView
+            android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/a_8"
@@ -23,102 +24,197 @@
             android:textSize="24sp"/>
     </RelativeLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:padding="8dp"
-            android:orientation="vertical"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
-
-            <LinearLayout
-
-                android:layout_width="wrap_content"
-                android:layout_height="22dp">
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="收货人："
-                    android:textColor="@android:color/black"/>
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="8dp"
-                android:layout_width="wrap_content"
-                android:layout_height="22dp">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="手机号码："
-                    android:textColor="@android:color/black"/>
-                <EditText
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@null"/>
-            </LinearLayout>
 
 
-        </LinearLayout>
 
-        <TextView
-            android:drawableTop="@mipmap/afm"
-            android:padding="4dp"
-            android:id="@+id/textView"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:text="选联系人"/>
-    </LinearLayout>
 
     <RelativeLayout
-        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="所在地区:"
-            android:textColor="@android:color/black"/>
-
-        <ImageView
-            android:background="@mipmap/a5j"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"/>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:paddingLeft="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="40dp"
+        android:layout_marginTop="3dp"
+        android:background="#fff">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_name"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:text="详细地址："
-            android:textColor="@android:color/black"/>
+            android:layout_marginLeft="10dp"
+            android:textColor="#000"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:text="联系人"/>
 
         <EditText
-            android:layout_width="wrap_content"
+            android:id="@+id/et_name"
+            android:layout_toRightOf="@+id/tv_name"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="街道、楼牌号等"
-            android:textSize="12sp"/>
-    </LinearLayout>
+            android:layout_centerVertical="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:background="@null"
+            android:hint="你的姓名"/>
 
 
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff">
 
 
+        <RadioGroup
+            android:id="@+id/rg_sex"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="90dp"
+            android:orientation="horizontal">
+            <RadioButton
+                android:id="@+id/rb_man"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:text="先生"/>
+            <RadioButton
+                android:id="@+id/rb_women"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:textSize="14sp"
+                android:text="女士"/>
+        </RadioGroup>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff">
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#000"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:text="联系电话"/>
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:layout_marginLeft="90dp"
+            android:inputType="phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/ib_delete_phone"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:background="@null"
+            android:hint="你的手机号"/>
+
+        <ImageButton
+            android:id="@+id/ib_delete_phone"
+            android:layout_marginRight="10dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_centerVertical="true"
+            android:background="@mipmap/icon_close"
+            android:visibility="invisible"
+            android:layout_toLeftOf="@+id/ib_add_phone_other"
+            />
+
+        <ImageButton
+            android:id="@+id/ib_add_phone_other"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_centerVertical="true"
+            android:background="@mipmap/address_icon_reserve"
+            />
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_phone_other"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff">
+
+        <EditText
+            android:id="@+id/et_phone_other"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="90dp"
+            android:inputType="phone"
+            android:layout_toLeftOf="@+id/ib_delete_phone_other"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:background="@null"
+            android:hint="备选电话"/>
+        <ImageButton
+            android:id="@+id/ib_delete_phone_other"
+            android:layout_marginRight="10dp"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_centerVertical="true"
+            android:background="@mipmap/icon_close"
+            android:visibility="invisible"
+            android:layout_alignParentRight="true"
+            />
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff">
+
+        <TextView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:textColor="#000"
+            android:layout_centerVertical="true"
+            android:textSize="12sp"
+            android:text="收货地址"
+            />
+
+        <EditText
+            android:id="@+id/et_receipt_address"
+            android:layout_marginLeft="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:background="@null"
+            android:hint="小区/写字楼/学校"/>
+    </RelativeLayout>
+    <RelativeLayout
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff">
+
+        <EditText
+            android:id="@+id/et_detail_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="90dp"
+            android:maxLines="1"
+            android:textSize="14sp"
+            android:background="@null"
+            android:hint="详细地址(如门牌号等)"/>
+    </RelativeLayout>
     <RelativeLayout
         android:visibility="visible"
         android:layout_width="match_parent"
@@ -131,8 +227,8 @@
             android:layout_marginLeft="10dp"
             android:textColor="#000"
             android:layout_centerVertical="true"
-            android:textSize="14sp"
-            android:text="标签:"
+            android:textSize="12sp"
+            android:text="标签"
             />
         <TextView
             android:id="@+id/tv_label"
@@ -159,6 +255,7 @@
             />
 
     </RelativeLayout>
+
 
     <Button
         android:id="@+id/bt_ok"
